Geojson has been drawn

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,7 @@
 
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
-<google-map></google-map>
+<div class="d-flex flex-row">
+  <app-geo-map></app-geo-map>
+</div>
+<ngx-ui-loader></ngx-ui-loader>
