--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<h1>{{ title }}</h1>
-
+<app-nav-menu></app-nav-menu>
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
 <div class="d-flex flex-row">
+  <app-geo-upload></app-geo-upload>
   <app-geo-map></app-geo-map>
+  <app-geo-swamp-list></app-geo-swamp-list>
 </div>
 <ngx-ui-loader></ngx-ui-loader>
